--- a/react-app/index.html
+++ b/react-app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>React / Typescript / antd / ts-force / sfdx / webpack / ;)</title>
+        <title>Typescript React App</title>
     </head>
     <body>
         <div id="root"></div>
